# calculator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
source/: calculator.cpp
